Bug 59814 - [EMF+] FILEOPEN EMF image inside EMF+ image are narrower
Summary: [EMF+] FILEOPEN EMF image inside EMF+ image are narrower
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:26.8.0 target:26.2.3
Keywords:
Depends on: 142567 142941
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2013-01-24 18:58 UTC by edudu1
Modified: 2026-03-14 09:05 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
The file for to work (2.76 MB, application/vnd.ms-powerpoint)
2013-01-24 18:58 UTC, edudu1
Details
Desired aspect for presentation (without animation). (171.83 KB, application/pdf)
2013-01-24 18:59 UTC, edudu1
Details
Aspect in presentation mode (131.79 KB, image/jpeg)
2013-01-24 19:00 UTC, edudu1
Details
bibisect40 log (3.00 KB, text/plain)
2013-01-26 19:34 UTC, Jorendc
Details
File converted to pptx with emf+ display issues (1.92 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-04-25 07:43 UTC, Bartosz
Details
The file PPT slide 2 compared MSO LO (190.30 KB, image/png)
2020-09-22 08:45 UTC, Timur
Details
The file PPTX slide 2 compared MSO LO (195.44 KB, image/png)
2020-09-22 08:50 UTC, Timur
Details
EMF/EMF+ image extracted from PPTX (597.79 KB, image/x-emf)
2021-05-23 13:07 UTC, Valek Filippov
Details
EMF/EMF+ image extracted from PPTX with EMF+ records removed (351.11 KB, image/x-emf)
2021-05-23 13:09 UTC, Valek Filippov
Details
Screenshot of EMF vs EMF+ (61.11 KB, image/png)
2021-05-23 13:17 UTC, Valek Filippov
Details
Minimal EMF+ image with EMF records removed (245.43 KB, image/emf)
2026-02-16 05:41 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description edudu1 2013-01-24 18:58:19 UTC
Created attachment 73598 [details]
The file for to work

I have this ppt file. It's some extract from a bigger file. 


In first page, in 3.4.5 works fine. It look first the title text, next, after clic, the lines "para estar..." and "que formamos...", then, after clic too, the five circles, and then, one by one, the text from the circles.

Well, in 4.0.0.1, I open the file, and I see all the text simultaneusly, and then all circles.

In second page, I have three images I want to see as in pdf file. Well, in presentation mode, I don't see any.

In thirth page, the graphic in presentation mode is bigger than edit mode.
Comment 1 edudu1 2013-01-24 18:59:33 UTC
Created attachment 73599 [details]
Desired aspect for presentation (without animation).
Comment 2 edudu1 2013-01-24 19:00:09 UTC
Created attachment 73600 [details]
Aspect in presentation mode
Comment 3 Jorendc 2013-01-26 19:18:18 UTC
(In reply to comment #0)
> Created attachment 73598 [details]
> The file for to work
> 
> I have this ppt file. It's some extract from a bigger file. 
> 
> 
> In first page, in 3.4.5 works fine. It look first the title text, next,
> after clic, the lines "para estar..." and "que formamos...", then, after
> clic too, the five circles, and then, one by one, the text from the circles.
> 
> Well, in 4.0.0.1, I open the file, and I see all the text simultaneusly, and
> then all circles.
I can reproduce this behavior. I see a regression there, so I'll bibisect this one.
> 
> In second page, I have three images I want to see as in pdf file. Well, in
> presentation mode, I don't see any.
I can reproduce this with 4.0.0.2 RC2 and it looks much better in 4.0 compared to version 3.5.0, so I think this is an improvement. Version 3.5.0 didn't show that much images. But I think there are still some missing images, or they ARE in the presentation, but not at the right place (all images are shuffled through the whole slide.
> 
> In thirth page, the graphic in presentation mode is bigger than edit mode.
I can't reproduce this...

Mark this bug as NEW, I'll try to think about 'what priority to give this bug'.
Comment 4 Jorendc 2013-01-26 19:34:24 UTC
Created attachment 73698 [details]
bibisect40 log

> > In first page, in 3.4.5 works fine. It look first the title text, next,
> > after clic, the lines "para estar..." and "que formamos...", then, after
> > clic too, the five circles, and then, one by one, the text from the circles.
> > 
> > Well, in 4.0.0.1, I open the file, and I see all the text simultaneusly, and
> > then all circles.
> I can reproduce this behavior. I see a regression there, so I'll bibisect
> this one.

See attached bibisect40 log. I did a 'good' 'bad' selection based on behavior described above.
Comment 5 Jorendc 2013-01-26 19:40:03 UTC
I mark this bug as 'medium' 'normal' following our flowchart https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg

This bug does prevent you to make high quality work but didn't resolve in loss of data/crash/etc. I hope you can agree with that triaging?

Kind regards,
Joren
Comment 6 edudu1 2013-01-29 07:58:39 UTC
When I read the graph for qualify bugs, probably is "normal" his level.

For my personal use, it's "blocker": I can't migrate from 3.4.5 if this bug is not corrected, because the document is generated for some directive personal with MS Word, and it must be read for very much personal with Libreoffice.

And I can not choose on this topic :-(

But I'm not the only user for libreoffice, and all we want "our" bug corrected. Thank you in all case.
Comment 7 Jorendc 2013-01-29 22:02:34 UTC
@Bug reporter (edudu1): Am I correct if I assume this ppt is created with 'PowerPoint'? I'm asking this because this may be related to Bug 49175

(In reply to comment #6)
> But I'm not the only user for libreoffice, and all we want "our" bug
> corrected. Thank you in all case.
I unfortunately tend to agree with that. 

kind regards,
Joren
Comment 8 edudu1 2013-01-30 09:00:44 UTC
Yes, you are correct in that, the original document is prepared with MS Powerpoint (not Word I say in another comment, I'm sorry).

It's possible that, though the presence of the issue is different, the trouble will be the same in ppt conversion module.

My problem right now is I'm between two bugs. I need migrate from 3.4.5 for the bug about relation with OWA and corruption for ODF files, and I can't migrate for this bug abouth importation for animation.
Comment 9 Jan Holesovsky 2013-03-29 18:04:09 UTC
So I had a look at this, and the only thing that seems broken with the current master are the missing 3 pictures on 2nd slide.  None of the commits look really related to the breakage.

The missing pictures (they are there, but empty) are EMF - Radek or Fridrich, can you please have a look?
Comment 10 Andras Timar 2013-12-13 07:27:25 UTC
The only issue remained is the EMF+ import on slide 2. From LibreOffice 3.3 to 4.2 the import improved gradually, but it is still not good. AOO 4.0.1 imports it better (but still not correctly) than any LibreOffice version.
Comment 11 Matthew Francis 2015-01-14 11:45:26 UTC
Adjusting Whiteboard and Keywords - as of 4.5 master, the remaining issue on this bug, that the images on slide 2 aren't shown correctly, isn't a regression (and however the first issue with the circles/timing was fixed seems to have been independent of this report)
Comment 12 QA Administrators 2016-01-17 20:05:27 UTC Comment hidden (obsolete)
Comment 13 Bartosz 2017-04-25 07:43:14 UTC
Created attachment 132819 [details]
File converted to pptx with emf+ display issues
Comment 14 QA Administrators 2018-04-26 02:38:14 UTC Comment hidden (obsolete)
Comment 15 Xisco Faulí 2019-04-12 10:39:38 UTC Comment hidden (obsolete)
Comment 16 Timur 2020-09-22 08:45:59 UTC
Created attachment 165758 [details]
The file PPT slide 2 compared MSO LO

I didn't test how it looked before, but in LO 7.1+ slide 2 from PPT is still not totally fine, per screenshot, images are more narrow that they should be.
Comment 17 Timur 2020-09-22 08:50:11 UTC
Created attachment 165759 [details]
The file PPTX slide 2 compared MSO LO

(In reply to Bartosz from comment #13)
> Created attachment 132819 [details]
> File converted to pptx with emf+ display issues

Looks like Mac MSO converted from original PPT. 
Anyway, I confirm similar issue with PPTX created in MSO.
Comment 18 Valek Filippov 2021-05-23 13:07:53 UTC
Created attachment 172271 [details]
EMF/EMF+ image extracted from PPTX

There are three images with the same-looking problem. This one is smallest.
Comment 19 Valek Filippov 2021-05-23 13:09:28 UTC
Created attachment 172272 [details]
EMF/EMF+ image extracted from PPTX with EMF+ records removed
Comment 20 Valek Filippov 2021-05-23 13:17:43 UTC
Created attachment 172273 [details]
Screenshot of EMF vs EMF+

EMF+ squeezes bitmaps but put the text right.
EMF w/o EMF+ keeps bitmap size ratio, but misplace the text.

Additional reduction is needed to identify the root cause.
Comment 21 Commit Notification 2021-06-11 10:32:49 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cabb9f5c8e22a23a453559636d9c9b3c2b0a5984

WMF/EMF tdf#59814 tdf#142567 Fix RestoreDC record

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2021-06-11 16:42:05 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8d3e7b2f5836106eac5172d8f4868bb540d652e6

EMF tdf#59814 tdf#142567 Align RestoreDC record with MSO implementation

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Xisco Faulí 2022-05-02 14:43:54 UTC Comment hidden (obsolete)
Comment 24 QA Administrators 2024-05-04 03:17:11 UTC Comment hidden (obsolete)
Comment 25 Bartosz 2026-02-16 05:39:43 UTC
(In reply to Xisco Faulí from comment #23)
> A polite ping to Bartosz:
> Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
> Otherwise, Could you please explain what's missing?
> Thanks

Last fix (RestoreDC) is fixing EMF display. As the file is in dual mode, the EMF+ needs also be fixed.
Comment 26 Bartosz 2026-02-16 05:41:18 UTC
Created attachment 205545 [details]
Minimal EMF+ image with EMF records removed
Comment 27 Commit Notification 2026-03-06 21:14:34 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4dccec254c0f3159356f9fb74c2f8863288331c6

tdf166084 tdf138087 tdf59814 EMF+ Fix scale and trans DrawImagePoints Metafile

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Bartosz 2026-03-06 22:03:24 UTC
Please verify solution with latest build
Comment 29 Commit Notification 2026-03-12 14:00:41 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/0afed6774e0fb39f99441c959f742e532dfaf764

tdf166084 tdf138087 tdf59814 EMF+ Fix scale and trans DrawImagePoints Metafile

It will be available in 26.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Commit Notification 2026-03-13 10:45:05 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c1fb4c337da358fe221e7e0ec172ec53742c4ba8

tdf59814 tdf168886 EMF+ Use Frame size and DPI instead Bound

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 31 Commit Notification 2026-03-14 09:05:58 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/5c3bf1387bce8f899e0b3b5f5aaef827931763e9

tdf59814 tdf168886 EMF+ Use Frame size and DPI instead Bound

It will be available in 26.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.