EMF tdf#59814 tdf#142567 Align RestoreDC record with MSO implementation

Some of WMF and EMF behaviours are undocumented.
In that case, we are implementing the behaviour, observed in MS Office
or MS Paint.

With this commit the behaviour of import EMF RestoreDC records,
will be the same as for MS Paint and MS Office.

Change-Id: I73b65d14018f2667ffd59daf16ecc6d7ce9c1870
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117052
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>